Fix performance bugs
[#141988951] Use FindBugs plugin in intellij

Signed-off-by: Phil Goodwin <pgoodwin@pivotal.io>